clean package and app structure

--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "TesiAlessandroSerafini",
-  "displayName": "TesiAlessandroSerafini"
+  "name": "oreegano",
+  "displayName": "oreegano"
 }
