--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-dropdownalert": "^4.2.1",
+    "react-native-flipper": "^0.47.0",
     "react-native-navigation": "^6.7.5",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
+    "redux-flipper": "^1.2.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0"
   },
