--- a/ios/oreegano/Info.plist
+++ b/ios/oreegano/Info.plist
@@ -38,7 +38,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -53,5 +53,17 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>PublicSans-Black.otf</string>
+		<string>PublicSans-Bold.otf</string>
+		<string>PublicSans-ExtraBold.otf</string>
+		<string>PublicSans-ExtraLight.otf</string>
+		<string>PublicSans-Light.otf</string>
+		<string>PublicSans-Medium.otf</string>
+		<string>PublicSans-Regular.otf</string>
+		<string>PublicSans-SemiBold.otf</string>
+		<string>PublicSans-Thin.otf</string>
+	</array>
 </dict>
 </plist>
