--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-dropdownalert": "^4.2.1",
     "react-native-flipper": "^0.47.0",
     "react-native-navigation": "^6.7.5",
+    "react-native-swiper": "^1.6.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-flipper": "^1.2.0",
