--- a/ios/oreegano/Info.plist
+++ b/ios/oreegano/Info.plist
@@ -20,6 +20,19 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>oreegano</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>oreegano</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
@@ -38,7 +51,19 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>PublicSans-Black.otf</string>
+		<string>PublicSans-Bold.otf</string>
+		<string>PublicSans-ExtraBold.otf</string>
+		<string>PublicSans-ExtraLight.otf</string>
+		<string>PublicSans-Light.otf</string>
+		<string>PublicSans-Medium.otf</string>
+		<string>PublicSans-Regular.otf</string>
+		<string>PublicSans-SemiBold.otf</string>
+		<string>PublicSans-Thin.otf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -53,17 +78,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>UIAppFonts</key>
-	<array>
-		<string>PublicSans-Black.otf</string>
-		<string>PublicSans-Bold.otf</string>
-		<string>PublicSans-ExtraBold.otf</string>
-		<string>PublicSans-ExtraLight.otf</string>
-		<string>PublicSans-Light.otf</string>
-		<string>PublicSans-Medium.otf</string>
-		<string>PublicSans-Regular.otf</string>
-		<string>PublicSans-SemiBold.otf</string>
-		<string>PublicSans-Thin.otf</string>
-	</array>
 </dict>
 </plist>
