--- a/package.json
+++ b/package.json
@@ -11,18 +11,26 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.11.0",
+    "@react-native-community/geolocation": "^2.0.2",
+    "@types/react-native-vector-icons": "^6.4.5",
     "axios": "^0.19.2",
+    "lottie-ios": "3.1.3",
+    "lottie-react-native": "^3.4.0",
+    "moment": "^2.27.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-dropdownalert": "^4.2.1",
     "react-native-flipper": "^0.47.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-navigation": "^6.7.5",
     "react-native-swiper": "^1.6.0",
+    "react-native-vector-icons": "^7.0.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-flipper": "^1.2.0",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
