--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/geolocation": "^2.0.2",
+    "@types/react-native-read-more-text": "^1.0.0",
     "@types/react-native-vector-icons": "^6.4.5",
     "axios": "^0.19.2",
     "lottie-ios": "3.1.3",
@@ -23,6 +24,7 @@
     "react-native-flipper": "^0.47.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-navigation": "^6.7.5",
+    "react-native-read-more-text": "^1.1.2",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^7.0.0",
     "react-redux": "^7.2.0",
