--- a/ios/oreegano/Info.plist
+++ b/ios/oreegano/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>oreegano</string>
+	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -50,9 +50,9 @@
 			</dict>
 		</dict>
 	</dict>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Ci serviamo della geolocalizzazione per mostrare la posizione corrente del corriere sulla mappa</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Ci serviamo della geolocalizzazione per mostrare la posizione corrente del corriere sulla mappa</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Ci serviamo della geolocalizzazione per mostrare la posizione corrente del corriere sulla mappa</string>
 	<key>UIAppFonts</key>
 	<array>
@@ -68,6 +68,10 @@
 		<string>MaterialIcons.ttf</string>
 		<string>MaterialCommunityIcons.ttf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string></string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -82,9 +86,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>UIBackgroundModes</key>
-	<array>
-		<string></string>
-	</array>
 </dict>
 </plist>
