--- a/ios/oreegano.xcodeproj/xcshareddata/xcschemes/oreegano.xcscheme
+++ b/ios/oreegano.xcodeproj/xcshareddata/xcschemes/oreegano.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "oreegano.app"
+               BuildableName = "org.reactjs.native.example.oreegano.app"
                BlueprintName = "oreegano"
                ReferencedContainer = "container:oreegano.xcodeproj">
             </BuildableReference>
@@ -55,7 +55,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "oreegano.app"
+            BuildableName = "org.reactjs.native.example.oreegano.app"
             BlueprintName = "oreegano"
             ReferencedContainer = "container:oreegano.xcodeproj">
          </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "oreegano.app"
+            BuildableName = "org.reactjs.native.example.oreegano.app"
             BlueprintName = "oreegano"
             ReferencedContainer = "container:oreegano.xcodeproj">
          </BuildableReference>
