--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@react-native-community/geolocation": "^2.0.2",
     "@types/react-native-read-more-text": "^1.0.0",
     "@types/react-native-vector-icons": "^6.4.5",
+    "@types/yup": "^0.29.7",
     "axios": "^0.19.2",
+    "formik": "^2.1.5",
     "lottie-ios": "3.1.3",
     "lottie-react-native": "^3.4.0",
     "moment": "^2.27.0",
@@ -32,7 +34,8 @@
     "redux-flipper": "^1.2.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
